--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"name": "Adam"
 	},
 	"dependencies": {
+		"body-parser": "^1.18.2",
 		"express": "^4.16.3",
 		"express-handlebars": "^3.0.0"
 	},
